運スタとは

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -53,6 +53,7 @@
     <p>運営スタッフとは？</p>
 </div>
 
+
 <div class="box1"> 
 
   <div class="section-title1 title1">
@@ -80,25 +81,22 @@
           </div>
         </div>
          <div class="paragraph">
-            はじめまして。
-            早稲田祭2023運営スタッフ代表の佐溝 眞行と申します。
-            早大生は、自分がときめく「何か」を追い求めて、常にまだ見ぬ先へと進み続けています。
-            そんな彼らの本気と情熱があふれんばかりに詰まった日本最大級の祭が、早稲田祭です。
-            「春に出会う、秋に咲く」
-            春に運営スタッフと出会ったみなさん。
-            早稲田文化が一斉に花開くあの景色を夢見て。
-            一歩ずつ進み続けたその先には、立派な運営スタッフの1人として秋の大舞台で花を咲かせる瞬間が待っています。
-            えんじのはっぴを背負って、みなさんと共に活動できる日を楽しみにしています。
+            はじめまして。<br/>
+            早稲田祭2023運営スタッフ代表の佐溝 眞行と申します。<br/>
+            早大生は、自分がときめく「何か」を追い求めて、常にまだ見ぬ先へと進み続けています。<br/>
+            そんな彼らの本気と情熱があふれんばかりに詰まった日本最大級の祭が、早稲田祭です。<br/>
+            「春に出会う、秋に咲く」<br/>
+            春に運営スタッフと出会ったみなさん。<br/>
+            早稲田文化が一斉に花開くあの景色を夢見て。<br/>
+            一歩ずつ進み続けたその先には、立派な運営スタッフの1人として秋の大舞台で花を咲かせる瞬間が待っています。<br/>
+            えんじのはっぴを背負って、みなさんと共に活動できる日を楽しみにしています。<br/>
             早稲田祭2023運営スタッフ 代表
       </div>
       </div>
     </div>
 
 </div>
-
 <div class="box2">
-  <img src="../static/img/hexagon-pink-border.png" class="hexa-border">
-
   <div class="title-box2">
     <div class="section-title1 title2">
       <img class="section1-img" src="../static/img/section1.png"
@@ -107,70 +105,73 @@
       </div>
   </div>
   <div class="paragraph box2-paragraph">
-    日本最大級の学園祭である早稲田祭をつくるため、資金調達からその資金の管理、祭の主要企画の立案・運営、早稲田祭に企画を出す参加団体・参加者の方々との調整まで、さまざまな活動を行っています。その他にも、早稲田祭の広報、当日の装飾物の制作、祭のさらなる進化を目指した企画や取り組みの立案・運営など、1年をかけて早稲田祭を準備しています。
-    祭当日も、会場内外の警備や案内、運営スタッフ自体の人員や物の管理、企画の運営など、運営スタッフとしての活動は本当に多岐にわたります。
+    日本最大級の学園祭である早稲田祭をつくるため、資金調達からその資金の管理、祭の主要企画の立案・運営、早稲田祭に企画を出す参加団体・参加者の方々との調整まで、さまざまな活動を行っています。<br/>その他にも、早稲田祭の広報、当日の装飾物の制作、祭のさらなる進化を目指した企画や取り組みの立案・運営など、<br/>1年をかけて早稲田祭を準備しています。<br/>
+    祭当日も、会場内外の警備や案内、運営スタッフ自体の人員や物の管理、企画の運営など、<br/>運営スタッフとしての活動は本当に多岐にわたります。<br/>
     そのため、運営スタッフとしてはひとつの団体ですが、その中で8つの「局」という部署に分かれて活動しています！
-    詳しい局の種類や活動内容はこちらのページをご覧ください！
+    <br/>詳しい局の種類や活動内容は<br/><a href="introduce.html" class="button">局紹介</a>をご覧ください！
   </div>
-</div>
-
-<div class="box-345">
-<div>
-
-<div class="box3">
-  <div class="title-box2">
     <div class="section-title1 title3">
       <img class="section1-img" src="../static/img/section1.png"
       />
       <div class="section1-text">所属人数</div>
-      </div>
   </div>
-</div>
 
-<div class="box4">
-  <div class="box4-contents">
-  例年約600人が所属しています！
-  </div>
+  <div class="contents">
+    例年約600人が所属しています！
+    </div>
+    <div class="section-title1 title3">
+      <img class="section1-img" src="../static/img/section1.png"
+      />
+      <div class="section1-text">活動日</div>
+    
+    </div>
+
+  <div class="contents">
+    毎週月曜日、木曜日の6限～
+    </div>
+    <img class="box2-img" src="../static/img/box5.jpg">
 </div>
 
 <div class="box3">
-  <div class="title-box2">
-    <div class="section-title1 title3">
-      <img class="section1-img" src="../static/img/section1.png"/>
-      <div class="section1-text">活動日</div>
-      </div>
-  </div>
-</div>
-
-<div class="box5">
-    <div class="box5-contents">
-      毎週月曜日、木曜日の6限～
-    </div>
-</div>
-</div>
-
-<img src="../static/img/box5.jpg" class="img-345">
-</div>
-
-<div class="box6">
-  <div class="title-box6">
+  <div class="title-box3">
     <div class="section-title1 title2">
       <img class="section1-img" src="../static/img/section1.png"
       />
       <div class="section1-text">はっぴ</div>
       </div>
   </div>
+  <div class="happi-container">
+  <img class="box3-img" src="../static/img/happi.jpg"
+  />
+  <div class="paragraph box3-paragraph">
+    運営スタッフを象徴するはっぴ。<br/>
+    早稲田大学の校色であるえんじ色を基調としていて、祭当日だけでなくさまざまな場面で着る機会があります。
+    <br/>背紋の大きな「祭」の字を背負うことで、士気が高まること間違いなし！
+
+  </div>
+  </div>
 </div>
 
-<div class="box7">
-  <div class="box7-container">
-    <img src="../static/img/happi.jpg">
-    <div class="paragraph box7-text">
-      運営スタッフを象徴するはっぴ。
-早稲田大学の校色であるえんじ色を基調としていて、祭当日だけでなくさまざまな場面で着る機会があります。
-背紋の大きな「祭」の字を背負うことで、士気が高まること間違いなし！
+<div class="box4">
+  <div class="title-box3">
+    <div class="section-title1 title3">
+      <img class="section1-img" src="../static/img/section1.png"
+      />
+      <div class="section1-text">レクリエーション</div>
+      </div>
+  </div>
+  <div class="paragraph box4-paragraph">
+    運営スタッフの活動は普段のタスク（お仕事）だけではありません！<br/>
+    疲れを癒し、仲を深めるためのさまざまなレクリエーションが行われます。<br/>
+    昨年度は、運スタ全体で運動会や冬合宿などが行われました！<br/>
 
-    </div>
+  </div>
+</div>
+
+<div class="box5">
+  <img class="image5-1" src="../static/img/rec1.jpg"/>
+  <img class="image5-2" src="../static/img/huyuga.jpg"/>
+</div>
 
   </div>
 </div>
@@ -252,7 +253,6 @@
     </div>
 </footer>
 <style>
-
   .box1{
     width: 100%;
     position: relative;
@@ -284,6 +284,21 @@
     display:flex;
     width:85%;
     margin: auto;
+    align-items: center;
+  }
+
+  .button{
+    border: solid 2px #77A9AA;
+    border-radius: 20px;
+    margin-top:30px;
+    text-decoration: none;
+    color:#08263A;
+    background-image: url(../static/img/pattern_pink.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding:2px;
+
   }
 
   .flex-child1{
@@ -315,6 +330,7 @@
   border-radius: 2px;
 }
 
+
 .daihyo{
   margin-bottom:15px;
 }
@@ -323,6 +339,11 @@
   width:80%;
   margin: 0 auto;
   position: relative;
+  border-top: 5px solid #F46E74;
+  border-left: 5px solid #F46E74;
+  border-bottom: 5px solid #F46E74;
+  padding: 90px 20px;
+  margin-top:30px;
 }
 
 .title2{
@@ -334,186 +355,194 @@
 .title-box2{
   width:100%;
   margin: 0 auto;
-}
-
-
-.box2::before{
-  content:"";
-   display:block;
-   width:50%;
-   height:5px;
-   background-color:#F46E74;
-   z-index: 1;
-   position:absolute;
-   top:50px;
-   left:-10%;
-}
-
-.box2::after{
-   content:"";
-   display:block;
-   width:15%;
-   height:5px;
-   background-color:#F46E74;
-   z-index: 1;
-   position:absolute;
-   top: 50px;
-   transform-origin: 0 0;
-   transform: rotate(90deg);
-   left:-4.7%;
-}
-
-.hexa-border{
-  width:10%;
-  transform: translateX(-50%);
-  transform: translateY(-50%);
-  position:absolute;
-  top:52px;
-  left: -10%;
-  z-index: 4;
-  background-color: #E3FFF6;
-}
-
-.box3{
-  width:100%;
+  position: absolute;
+  top:-35;
+  left:0;
 }
 
 .title3{
-  margin-left: 20px;
+  position: relative;
+  left:-5.5%;
   z-index: 5;
   background-color: #E3FFF6;
+}
+
+
+.box3{
+  width:80%;
+  margin: 0 auto;
+  position: relative;
+  border-top: 5px solid #77A9AA;
+  border-right: 5px solid #77A9AA;
+  border-bottom: 5px solid #77A9AA;
+  padding: 20px;
+  padding-top: 100px;
+  margin-top:-4.5px;
+  z-index: 3;
+}
+
+.box3-img{
+  width:40%;
+}
+
+.box3-paragraph{
+  width:50%;
+}
+
+.happi-container{
+  width:95%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  margin-bottom:60px;
+  justify-content: space-between;
+}
+
+.title-box3{
+  width:100%;
+  margin: 0 auto;
+  position: absolute;
+  top:-35;
+  left:0;
+}
+
+.contents{
+  font-weight:700;
+  font-size: 27px;
+  color: #08263A;
 }
 
 .box4{
   width:80%;
   margin: 0 auto;
   position: relative;
-  margin-bottom:80px;
+  border-top: 5px solid #77A9AA;
+  border-left: 5px solid #77A9AA;
+  padding: 20px;
+  padding-top: 100px;
+  padding-bottom: 50px;
+  margin-top:-4.5px;
+  z-index: 4;
 }
 
-.box4-contents{
-  font-weight:700;
-  font-size: 27px;
-}
-
-.box4::after{
-   content:"";
-   display:block;
-   width:30%;
-   height:5px;
-   background-color:#F46E74;
-   z-index: 1;
-   position:absolute;
-   top: 50px;
-   transform-origin: 0 5px;
-   transform: rotate(-90deg);
-   left:-4.7%;
+.box4-paragraph{
+  width: 90%;
+  margin-bottom: 50px;
 }
 
 .box5{
   width:80%;
   margin: 0 auto;
   position: relative;
-  padding-bottom:80px;
+  border-top: 5px solid #77A9AA;
+  border-right: 5px solid #77A9AA;
+  padding: 20px;
+  padding-top: 100px;
+  padding-bottom: 50px;
+  margin-top:-4.5px;
+  z-index: 5;
+  margin-bottom:200px;
 }
 
-
-
-.box5-contents{
-  font-weight:700;
-  font-size: 27px;
-}
-
-.box5::before{
-   content:"";
-   display:block;
-   width:17.6%;
-   height:5px;
-   background-color:#F46E74;
-   z-index: 1;
-   position:absolute;
-   top:0;
-   left:-4.7%;
-   transform-origin: 0 0;
-   transform: rotate(90deg);
-}
-
-
-.box-345{
-  width: 100%;
-  position: relative;
-}
-
-.img-345{
-  width: 35%;
+.image5-1{
+  width:40%;
   position: absolute;
-  right:10%;
-  top:10%;
+  left:-8%;
+  top:-25%;
 }
 
-.box6{
-  width:80%;
-  margin: 0 auto;
-  position: relative;
+.image5-2{
+  width:40%;
+  position: absolute;
+  right:-8%;
+  top:25%;
 }
 
-.box6::before{
-   content:"";
-   display:block;
-   width:50%;
-   height:5px;
-   background-color:#F46E74;
-   z-index: 1;
-   position:absolute;
-   top:50px;
-   left:-4.7%;
+.box2-img{
+  width:30%;
+  position:absolute;
+  right:7%;
+  bottom:7%;
 }
 
-.box6::after{
-   content:"";
-   display:block;
-   width:50%;
-   height:5px;
-   background-color:#77A9AA;
-   z-index: 1;
-   position:absolute;
-   top: 50px;
-   transform-origin: 0 0;
-   right:-4.7%;
+.box2-paragraph{
+  margin-bottom: 30px;
 }
 
-.box7{ 
-  width:80%;
-  margin: 0 auto;
-  position: relative;
-  background-color: #E3FFF6;
-  z-index:7;
+.paragraph{
+  letter-spacing:0.1em;
+  line-height:20px;
+}
+@media print, screen and (max-width:1200px){
+  .flexparent1{
+    display: block;
+    border: 3px solid #77A9AA;
+    border-radius: 20px;
+    position: relative;
+  }
+
+  .sammy{
+    position:absolute;
+    top:0;
+    right:-5%;
+    transform: translateX(-50%);
+    transform: translateY(-50%);
+    width:50%;
+  }
+
+  .flex-child2{
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  .title3{
+    left: -10%;
+  }
+  .contents{
+    font-size:20px;
+    margin-bottom: 20px;
+  }
+  .box2{
+    padding-bottom: 200px;
+  }
+
+  .box2-img{
+    right:0;
+    bottom: 1%;
+    width:70%;
+    z-index: 99;
+  }
+
+  .happi-container{
+    display: block;
+    width: 100%;
+  }
+  .box3-img{
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .box3-paragraph{
+    width: 100%;
+  }
+  .image5-1{
+    width: 70%;
+    left:-3%
+  }
+
+  .image5-2{
+    width: 70%;
+    top: 100%;
+  }
+
+  .paragraph{
+    line-height: 20px;
+  }
+
+  .box4-paragraph{
+    width: 100%;
+  }
 }
 
-.box7-container{
-  display: flex;
-}
-
-.box7-container img{
-  width: 30%;
-}
-
-.box7-text{
-  margin-left: 20px;
-}
-
-.box7::after{
-   content:"";
-   display:block;
-   width:50%;
-   height:5px;
-   background-color:#77A9AA;
-   z-index: 1;
-   position:absolute;
-   transform-origin: right bottom;
-   transform: rotate(90deg);
-   right:-4.7%;
-}
 
 </style>
 </body>
