--- a/pages/question.html
+++ b/pages/question.html
@@ -225,6 +225,14 @@
 </footer>
 
 <style>
+
+body{
+  background-color: #fff;
+}
+
+.bar{
+  background-color: #E3FFF6;
+}
   /*アコーディオン全体*/
 .accordion-area{
     list-style: none;
