--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" media="(min-width: 1200px)" href="static/css/index_pc.css">
     <link rel="stylesheet" media="(max-width: 1200px)" href="static/css/index_mobile.css">
+    <meta name="google-site-verification" content="AN9Z6c0SLwnd6aV6AHVgEswJSbA8MOT_jS5lFlX-hjw" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="早稲田祭運営スタッフ2023年度新歓用公式サイトです。"> 
     <meta name="keywords" content="早稲田祭,早稲田祭運営スタッフ,運スタ,早稲田">
