リンク挿入

--- a/pages/top.html
+++ b/pages/top.html
@@ -23,13 +23,6 @@
 </head>
 
 <body class="topbody">
-  <style>
-    @media screen and (max-width: 1024px) {
-    .topbody{
-      background-color: #ffffff;
-    }
-  }
-  </style>
     <header class="bar">
         <div class="menu">
             <span class="menu__line menu__line--top"></span>
@@ -59,11 +52,205 @@
         <img src="../static/img/topunsta.JPG">
         <img src="../static/img/topdouzoumae.JPG">
     </div>
- <style>
+</div>
+<!--NEWS-->
+<div class="news">
+ <p>NEWS</p>
+ <div class="newscontainer">
+  <div class="paragraph">対面説明会応募フォームはこちらから！</div>
+  <!--3/26 12:00リリース
+    <div class="paragraph"><a>交流企画参加希望フォーム①受付開始！</a></div>
+  -->
+ </div>
+</div>
+
+ <!--squarelink-->
+ <!--TODO　飛ばすページのリンク挿入-->
+<div class="f-container">
+<div class="squarelinkpink">
+    <a href="" class="btn-pink btn-border-shadow btn-border-shadow--color">説明会</a>
+</div>
+
+<div class="squarelinkgreen">
+    <a href="" class="btn-green btn-border-shadow-green btn-border-shadow--color-green">ワセトーーーーク！！</a>
+</div>
+
+<div class="squarelinkyellow">
+    <a href="" class="btn-yellow btn-border-shadow-yellow btn-border-shadow--color-yellow">運スターツアーズ</a>
+</div>
+</div>
+
+<!--squarelink-->
+<!--TODO　飛ばすページのリンク挿入-->
+<div class="f-container">
+  <div class="squarelinkpink">
+      <a href="" class="btn-pink btn-border-shadow btn-border-shadow--color">運スタミッケ</a>
+  </div>
+  
+  <div class="squarelinkgreen">
+      <a href="" class="btn-green btn-border-shadow-green btn-border-shadow--color-green">運スタカウンセリング</a>
+  </div>
+  
+  <div class="squarelinkyellow">
+      <a href="" class="btn-yellow btn-border-shadow-yellow btn-border-shadow--color-yellow">運スタゼミナール</a>
+  </div>
+  </div>
+  <!--早稲田祭とは-->
+  <!--TODO　こちらのリンク挿入-->
+<div class="wasedasaitoha">
+ <div class="photocontainer">
+  <div class="four-one">
+    <img src="../static/img/topkatakumi.JPG">
+  </div>
+ <div class="four-two">
+    <img src="../static/img/topnuri.JPG">
+ </div>
+ </div>
+ <div class="toha">
+   <div class="section-title1">
+       <img class="section1-img" src="../static/img/section1.png"
+      />
+      <div class="section1-text">早稲田祭とは</div>
+   </div>
+   <div class="toptext">
+   <div class="paragraph">
+    年に1度、</br class="kuuhaku">早稲田キャンパス・戸山キャンパス・周辺地域を舞台に開催される早稲田文化の祭典、</br class="kuuhaku">それが「早稲田祭」です。</br class="kuuhaku">日本最大級の学園祭である早稲田祭についての</br class="kuuhaku">詳しい情報は、<a href="aboutfes.html">こちら</a>からご覧ください。
+   </div>
+  </div>
+  </div>
+</div>
+
+<!--運営スタッフとは-->
+<!--TODO　こちらのリンク挿入-->
+<div class="stafftoha">
+  <div class="photocontainer">
+   <div class="four-three">
+     <img src="../static/img/topfuusen.JPG">
+   </div>
+  <div class="four-four">
+     <img src="../static/img/toptatekan.JPG">
+  </div>
+  </div>
+  <div class="uwaa">
+    <div class="section-title1">
+        <img class="section1-img" src="../static/img/section1.png"
+       />
+       <div class="section1-text">運営スタッフとは</div>
+    </div>
+    <div class="toptext2">
+      <div class="paragraph">
+    早稲田祭2023の開催、</br class="kuuhaku">そして成功に向けて日々活動しているのが私たち「早稲田祭2023運営スタッフ」です。</br class="kuuhaku">活動日時や活動内容については</br class="kuuhaku"><a href="aboutus.html">こちら</a>からご覧ください。
+    </div>
+  </div>
+  </div>
+ </div>
+
+<!--ピンクボタン3つ-->
+<div class="pinkbtn-container">
+ <div>
+   <a href="aboutstaff.html" class="btn_04">運営スタッフのリアル</a>
+ </div>
+ <div>
+   <a href="introduce.html" class="btn_04">局紹介</a>
+ </div>
+ <div>
+   <a href="overall.html" class="btn_04">運営スタッフの全体像</a>
+ </div>
+</div>
+<!--入会方法 squarelinkyellow-->
+<div class="squarecenter">
+ <div class="squarelinkyellow">
+  <a href="howto.html" class="btn-yellow btn-border-shadow-yellow btn-border-shadow--color-yellow">入会方法</a>
+ </div>
+ </div>
+ 
+ <footer class="footer">
+    <div class="footer-inner">
+      <div class="footer-body">
+        <div class="footer-logo-container">
+          <img class="footer-logo" src="../static/img/logo_catch.png"
+          />
+        </div>
+        <div class="footer-navi-list">
+
+          <hr />
+          <ul class="nav-list">
+           <li><a href="../index.html">HOME</a></li> <li><a href="aboutfes.html">早稲田祭とは</a></li>
+            <li><a href="aboutus.html">運営スタッフとは</a></li>
+          </ul>
+          <hr />
+          <ul class="nav-list">
+            
+            <li> <a href ="introduce.html">局紹介</a>
+            </li>
+            <li><a href ="howto.html">入会方法</a>
+            </li>
+            <li><a href="aboutstaff.html">
+             スタッフの内情
+            </a></li>
+            <li><a href="overall.html">運営スタッフ全体像</a></li>
+          </ul>
+          <hr />
+          <ul class="nav-list">
+            <li><a href ="event.html">新歓情報</a></li>
+            <li><a href="photogallery.html">運スタ写真館</a></li>
+            <li><a href="question.html">よくある質問</a></li>
+            <li><a href="contact.html">お問い合わせについて</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="sns-links-container">
+        <a
+          href="https://twitter.com/wasedasai_new"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img
+            class="sns-link"
+            src="../static/img/twitter.png"
+            alt="twitterのリンク"
+        /></a>
+        <a
+          href="https://instagram.com/wasedasai_new/"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img
+            class="sns-link"
+            src="../static/img/instagram.png"
+            alt="instagramのリンク"
+        /></a>
+        <a
+          href="https://youtube.com/channel/UCwyXxBLHp1ku0arseLoIaGA"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img
+            class="sns-link"
+            src="../static/img/youtube.png"
+            alt="youtubeのリンク"
+        /></a>
+        <a
+          href="https://linevoom.line.me/user/_dYhT9WMHSKev8Oi2AB7qJZK6ocoEW_uYk8j2h3w"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img
+            class="sns-link"
+            src="../static/img/line.png"
+            alt="noteのリンク"
+        /></a>
+      </div>
+    </div>
+</footer>
+<style>
+    @media screen and (max-width: 1024px) {
+    .topbody{
+      background-color: #ffffff;
+    }
+  }
+  /*スライドショー*/
  .slide-show {
   position: relative;
   width: 100%;
-  height: 650px;
+  height: 700px;
   overflow: hidden;
   margin: 0 auto;
   overflow: hidden;
@@ -114,17 +301,7 @@
     height: 250px
   }
 }
-</style>
-</div>
-<!--NEWS-->
-<div class="news">
- <p>NEWS</p>
- <div class="newscontainer">
-  <div class="paragraph">対面説明会応募フォームはこちらから！</div>
-  <!--3/26 12:00リリース
-    <div class="paragraph"><a>交流企画参加希望フォーム①受付開始！</a></div>
-  -->
-  <style>
+/*NEWS*/
     .news{
       background-color: #ffffff;
       width: 550px;
@@ -197,93 +374,23 @@
    background: #77a9aa;
    border-radius: 6px;
    }
-  </style>
- </div>
-</div>
-
- <!--squarelink-->
- <!--TODO　飛ばすページのリンク挿入-->
-<div class="f-container">
-  <style>
-    .f-container{
-      display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-      align-content: space-around;
-      padding-top: 50px;
-    }
-  </style>
-<div class="squarelinkpink">
-    <a href="" class="btn-pink btn-border-shadow btn-border-shadow--color">説明会</a>
-    <style>
-      .squarelinkpink{
-        margin-bottom: 50px;
-      }
-    </style>
-</div>
-
-<div class="squarelinkgreen">
-    <a href="" class="btn-green btn-border-shadow-green btn-border-shadow--color-green">ワセトーーーーク！！</a>
-    <style>
-      .squarelinkgreen{
-        margin-bottom: 50px;
-      }
-    </style>
-</div>
-
-<div class="squarelinkyellow">
-    <a href="" class="btn-yellow btn-border-shadow-yellow btn-border-shadow--color-yellow">運スターツアーズ</a>
-</div>
-</div>
-
-<!--squarelink-->
-<!--TODO　飛ばすページのリンク挿入-->
-<div class="f-container">
-  <div class="squarelinkpink">
-      <a href="" class="btn-pink btn-border-shadow btn-border-shadow--color">運スタミッケ</a>
-  </div>
-  
-  <div class="squarelinkgreen">
-      <a href="" class="btn-green btn-border-shadow-green btn-border-shadow--color-green">運スタカウンセリング</a>
-  </div>
-  
-  <div class="squarelinkyellow">
-      <a href="" class="btn-yellow btn-border-shadow-yellow btn-border-shadow--color-yellow">運スタゼミナール</a>
-  </div>
-  <style>
+   /*Squarelinik*/
     .f-container{
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: space-around;
+      align-content: space-around;
       padding-top: 50px;
     }
-  </style>
-  </div>
-  <!--早稲田祭とは-->
-  <!--TODO　こちらのリンク挿入-->
-<div class="wasedasaitoha">
- <div class="photocontainer">
-  <div class="four-one">
-    <img src="../static/img/topkatakumi.JPG">
-  </div>
- <div class="four-two">
-    <img src="../static/img/topnuri.JPG">
- </div>
- </div>
- <div class="toha">
-   <div class="section-title1">
-       <img class="section1-img" src="../static/img/section1.png"
-      />
-      <div class="section1-text">早稲田祭とは</div>
-   </div>
-   <div class="toptext">
-   <div class="paragraph">
-    年に1度、</br class="kuuhaku">早稲田キャンパス・戸山キャンパス・周辺地域を舞台に開催される早稲田文化の祭典、</br class="kuuhaku">それが「早稲田祭」です。</br class="kuuhaku">日本最大級の学園祭である早稲田祭についての</br class="kuuhaku">詳しい情報は、<a href="">こちら</a>からご覧ください。
-   </div>
-  </div>
-  </div>
- <style>
+      .squarelinkpink{
+        margin-bottom: 50px;
+      }
+      .squarelinkgreen{
+        margin-bottom: 50px;
+      }
+
+  /*早稲田祭とは*/
   .wasedasaitoha{
             position: relative;
         }
@@ -465,33 +572,7 @@ font-size:15px;
     color:#08263a;
   }
 } 
- </style>
-</div>
-
-<!--運営スタッフとは-->
-<!--TODO　こちらのリンク挿入-->
-<div class="stafftoha">
-  <div class="photocontainer">
-   <div class="four-three">
-     <img src="../static/img/topfuusen.JPG">
-   </div>
-  <div class="four-four">
-     <img src="../static/img/toptatekan.JPG">
-  </div>
-  </div>
-  <div class="uwaa">
-    <div class="section-title1">
-        <img class="section1-img" src="../static/img/section1.png"
-       />
-       <div class="section1-text">運営スタッフとは</div>
-    </div>
-    <div class="toptext2">
-      <div class="paragraph">
-    早稲田祭2023の開催、</br class="kuuhaku">そして成功に向けて日々活動しているのが私たち「早稲田祭2023運営スタッフ」です。</br class="kuuhaku">活動日時や活動内容については</br class="kuuhaku"><a href="">こちら</a>からご覧ください。
-    </div>
-  </div>
-  </div>
-  <style>
+/*運営スタッフとは*/
    .stafftoha{
              position: relative;
              margin-top: 50px;
@@ -670,22 +751,7 @@ font-size:15px;
     color:#08263a;
   }
  } 
-  </style>
- </div>
-
-<!--ピンクボタン3つ-->
-<!--TODO　飛ばすページのリンク挿入-->
-<div class="pinkbtn-container">
- <div>
-   <a href="" class="btn_04">運営スタッフのリアル</a>
- </div>
- <div>
-   <a href="" class="btn_04">局紹介</a>
- </div>
- <div>
-   <a href="" class="btn_04">運営スタッフの全体像</a>
- </div>
- <style>
+/*ピンクボタン*/
   .pinkbtn-container{
     display: flex;
     justify-content: space-around;
@@ -721,15 +787,7 @@ font-size:15px;
 	   background: #ffffff;
      }
   }
- </style>
-</div>
-<!--入会方法 squarelinkyellow-->
-<!--TODO　飛ばすページのリンク挿入-->
-<div class="squarecenter">
- <div class="squarelinkyellow">
-  <a href="" class="btn-yellow btn-border-shadow-yellow btn-border-shadow--color-yellow">入会方法</a>
- </div>
- <style>
+  /*Squarelinkyellow*/
   .squarecenter{
     display: flex;
     justify-content: center;
@@ -742,82 +800,4 @@ font-size:15px;
     }
   }
 </style>
- </div>
- 
- <footer class="footer">
-    <div class="footer-inner">
-      <div class="footer-body">
-        <div class="footer-logo-container">
-          <img class="footer-logo" src="../static/img/logo_catch.png"
-          />
-        </div>
-        <div class="footer-navi-list">
-
-          <hr />
-          <ul class="nav-list">
-           <li><a href="../index.html">HOME</a></li> <li><a href="aboutfes.html">早稲田祭とは</a></li>
-            <li><a href="aboutus.html">運営スタッフとは</a></li>
-          </ul>
-          <hr />
-          <ul class="nav-list">
-            
-            <li> <a href ="introduce.html">局紹介</a>
-            </li>
-            <li><a href ="howto.html">入会方法</a>
-            </li>
-            <li><a href="aboutstaff.html">
-             スタッフの内情
-            </a></li>
-            <li><a href="overall.html">運営スタッフ全体像</a></li>
-          </ul>
-          <hr />
-          <ul class="nav-list">
-            <li><a href ="event.html">新歓情報</a></li>
-            <li><a href="photogallery.html">運スタ写真館</a></li>
-            <li><a href="question.html">よくある質問</a></li>
-            <li><a href="contact.html">お問い合わせについて</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="sns-links-container">
-        <a
-          href="https://twitter.com/wasedasai_new"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><img
-            class="sns-link"
-            src="../static/img/twitter.png"
-            alt="twitterのリンク"
-        /></a>
-        <a
-          href="https://instagram.com/wasedasai_new/"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><img
-            class="sns-link"
-            src="../static/img/instagram.png"
-            alt="instagramのリンク"
-        /></a>
-        <a
-          href="https://youtube.com/channel/UCwyXxBLHp1ku0arseLoIaGA"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><img
-            class="sns-link"
-            src="../static/img/youtube.png"
-            alt="youtubeのリンク"
-        /></a>
-        <a
-          href="https://linevoom.line.me/user/_dYhT9WMHSKev8Oi2AB7qJZK6ocoEW_uYk8j2h3w"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><img
-            class="sns-link"
-            src="../static/img/line.png"
-            alt="noteのリンク"
-        /></a>
-      </div>
-    </div>
-</footer>
 </body>
