news欄aタグ指定

--- a/pages/top.html
+++ b/pages/top.html
@@ -57,7 +57,7 @@
 <div class="news">
  <p>NEWS</p>
  <div class="newscontainer">
-  <div class="paragraph">対面説明会応募フォームはこちらから！</div>
+  <div class="paragraph">対面説明会応募フォームは<a href="https://docs.google.com/forms/d/e/1FAIpQLSclxm2qaAjPRRUA55MydFYBVwnnfTI-fxwsibBX_OGSdzU8xg/viewform" target="_blank" rel="noreferrer noopener">こちら</a>から！</div>
   <!--3/26 12:00リリース
     <div class="paragraph"><a>交流企画参加希望フォーム①受付開始！</a></div>
   -->
@@ -320,7 +320,13 @@
    height: 150px;
    text-align: center;
    }
-
+   .newscontainer a{
+    color:#77a9aa;
+   }
+   
+   .newscontainer a:hover{
+    color:#f7c4c6;
+   }
    @media screen and (max-width: 1024px)  and (min-width: 520px) {
     .news{
       border: 3px solid #77a9aa;
