--- a/pages/overall.html
+++ b/pages/overall.html
@@ -47,54 +47,13 @@
                  <img src="../static/img/logo.png" height="50px">
                 </div>
     </header>
-
- <div class="spacer" style="height:100%;">
-    aaaaaaaaaaaa
-    appear-class="as
-    s
-    ada
-    da
-    dada
-    adad
-    ad
-    a
-    dad
-    a
-    da
-    da"
- </div>
- <div class="heroblue">
-    <img src="../static/img/heroblue.png"class="herophoto">
-    <p>hero</p>
-</div>
-<div class="herowhite">
-    <img src="../static/img/herowhite.png"class="herophoto">
-    <p>hero</p>
-</div>
-
-<div class="squarelinkpink">
-    <a href="" class="btn-pink btn-border-shadow btn-border-shadow--color">squarelink</a>
-</div>
-
-<div class="squarelinkgreen">
-    <a href="" class="btn-green btn-border-shadow-green btn-border-shadow--color-green">squarelink</a>
-</div>
-
-<div class="squarelinkyellow">
-    <a href="" class="btn-yellow btn-border-shadow-yellow btn-border-shadow--color-yellow">squarelink</a>
-</div>
-
-<div class="squarelinkred">
-    <a href="" class="btn-red btn-border-shadow-red btn-border-shadow--color-red">squarelink</a>
-</div>
-
-
-<div class="paragraph">
-    SampleBox1アリスは川辺でおねえさんのよこにすわって、なんにもすることがないのでとても退屈（たいくつ）しはじめていました。
-
-    一、二回はおねえさんの読んでいる本をのぞいてみたけれど、そこには絵も会話もないのです。
-    「絵や会話のない本なん
-</div>
+    <div class="heroblue">
+      <img src="../static/img/heroblue.png"class="herophoto">
+      <p>運営スタッフの全体像</p>
+  </div>
+   <div class="soshikizucontainer">
+      <img src="../static/img/soshikizu.png" class="soshikizu">
+   </div>
 
  <footer class="footer">
     <div class="footer-inner">
@@ -172,4 +131,13 @@
       </div>
     </div>
 </footer>
+<style>
+  .soshikizucontainer{
+    text-align: center;
+    background-color: #ffffff;
+  }
+  .soshikizu{
+    width: 60%;
+  }
+</style>
 </body>
