--- a/pages/howto.html
+++ b/pages/howto.html
@@ -22,12 +22,7 @@
     <script type="text/javascript" src="../static/js/index.js"></script>
 </head>
 
-<body class="howtobody">
-  <style>
-    .howtobody{
-      background-color: #ffffff;
-    }
-  </style>
+<body>
     <header class="bar">
       
         <div class="menu">
@@ -109,6 +104,7 @@
   <style>
     .howtocontainer{
      text-align: center;
+     background-color: #ffffff;
     }
     .listcontainer {
     display: table;
