kou/unsutatoha/shuusei

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -50,7 +50,7 @@
 
  <div class="heroblue">
     <img src="../static/img/heroblue.png"class="herophoto">
-    <p>運営スタッフとは？</p>
+    <p>運営スタッフとは</p>
 </div>
 
 
@@ -76,21 +76,28 @@
 
       <div class="flex-child2">
         <div class="daihyo">
-          <div class="blocktitle-navy">
+          <div class="blocktitle-green">
             佐溝 眞行
           </div>
         </div>
          <div class="paragraph">
-            はじめまして。<br/>
-            早稲田祭2023運営スタッフ代表の佐溝 眞行と申します。<br/>
-            早大生は、自分がときめく「何か」を追い求めて、常にまだ見ぬ先へと進み続けています。<br/>
-            そんな彼らの本気と情熱があふれんばかりに詰まった日本最大級の祭が、早稲田祭です。<br/>
-            「春に出会う、秋に咲く」<br/>
-            春に運営スタッフと出会ったみなさん。<br/>
-            早稲田文化が一斉に花開くあの景色を夢見て。<br/>
-            一歩ずつ進み続けたその先には、立派な運営スタッフの1人として秋の大舞台で花を咲かせる瞬間が待っています。<br/>
-            えんじのはっぴを背負って、みなさんと共に活動できる日を楽しみにしています。<br/>
-            早稲田祭2023運営スタッフ 代表
+          はじめまして。</br>
+          早稲田祭2023運営スタッフ 代表の佐溝眞行と申します。</br>
+          みなさんには早稲田でやりたいことがありますか？</br>
+          早稲田には、早稲田でしかできないこと、早稲田でしか見えない景色がたくさんあります。</br>
+          その1つが早稲田祭です。</br>
+          早稲田祭は早大生を中心として本当にたくさんの人の情熱や本気が集い、夢が咲き誇る日本最大級の学園祭です。</br>
+          早稲田祭運営スタッフはそんな早稲田祭の主催・運営を担っており、総勢600人を超えるメンバーで共に活動しています！</br>
+          まだ見ぬ自分を、まだ見ぬ祭を。</br>
+          今まで見たこともないような、本気。</br>
+          今まで気づくことのなかった、自分。</br>
+          運営スタッフとしての活動には、「知らない」が詰まっています。</br>
+          私たちと一緒に、早稲田祭運営スタッフとして早稲田祭という夢を目指しましょう。</br>
+          運スタには共に夢を追う仲間がいます。</br>
+          あなたの夢が、いつか誰かの夢に。誰かの夢が、いつかあなたの夢に。</br>
+          そしてあなたの夢が、まだ誰も見たことのない祭を創る。</br>
+          楽しいことも大変なことも全部ひっくるめて、早稲田祭を創り上げる日々をみなさんと共に過ごすのをとても楽しみにしています！</br>
+          早稲田祭2023運営スタッフ 代表
       </div>
       </div>
     </div>
@@ -108,7 +115,7 @@
     日本最大級の学園祭である早稲田祭をつくるため、資金調達からその資金の管理、祭の主要企画の立案・運営、早稲田祭に企画を出す参加団体・参加者の方々との調整まで、さまざまな活動を行っています。<br/>その他にも、早稲田祭の広報、当日の装飾物の制作、祭のさらなる進化を目指した企画や取り組みの立案・運営など、<br/>1年をかけて早稲田祭を準備しています。<br/>
     祭当日も、会場内外の警備や案内、運営スタッフ自体の人員や物の管理、企画の運営など、<br/>運営スタッフとしての活動は本当に多岐にわたります。<br/>
     そのため、運営スタッフとしてはひとつの団体ですが、その中で8つの「局」という部署に分かれて活動しています！
-    <br/>詳しい局の種類や活動内容は<br/><a href="introduce.html" class="button">局紹介</a>をご覧ください！
+    <br/>詳しい局の種類や活動内容は<br/><a href="introduce.html" class="button">こちら</a>をご覧ください！
   </div>
     <div class="section-title1 title3">
       <img class="section1-img" src="../static/img/section1.png"
@@ -164,7 +171,7 @@
     運営スタッフの活動は普段のタスク（お仕事）だけではありません！<br/>
     疲れを癒し、仲を深めるためのさまざまなレクリエーションが行われます。<br/>
     昨年度は、運スタ全体で運動会や冬合宿などが行われました！<br/>
-
+    ※撮影時のみマスクを外しています<br/>
   </div>
 </div>
 
