背景色の修正

--- a/pages/aboutfes.html
+++ b/pages/aboutfes.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="../static/js/index.js"></script>
 </head>
 
-<body class="aboutfesbody">
+<body>
     <header class="bar">
       
         <div class="menu">
@@ -201,10 +201,6 @@
 </body>
 
 <style>
-.aboutfesbody{
-  background-color: #ffffff;
-  color:#08263A;
-}
 .section-title2 {
   margin-left: auto;
   margin-right: auto;
@@ -219,10 +215,14 @@
     font-size: 18px;
     line-height: 1em;
     padding-bottom: 40px;
+    background-color: #ffffff;
+  color:#08263A;
   }
   .data-section {
     line-height: 14px;
     font-size: 14px;
+    background-color: #ffffff;
+  color:#08263A;
   }
 
   .history-section .item {
