文字の太さ修正

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -124,7 +124,7 @@
   </div>
 
   <div class="contents">
-    例年約600人が所属しています！
+    例年約<strong>600</strong>人が所属しています！
     </div>
     <div class="section-title1 title3">
       <img class="section1-img" src="../static/img/section1.png"
@@ -134,7 +134,7 @@
     </div>
 
   <div class="contents">
-    毎週月曜日、木曜日の6限～
+    毎週<strong>月</strong>曜日、<strong>木</strong>曜日の6限～
     </div>
     <img class="box2-img" src="../static/img/box5.jpg">
 </div>
@@ -414,7 +414,6 @@
 }
 
 .contents{
-  font-weight:700;
   font-size: 27px;
   color: #08263A;
 }
