--- a/pages/components.html
+++ b/pages/components.html
@@ -33,12 +33,12 @@
         <nav class="gnav">
             <div class="gnav__wrap">
                 <ul class="gnav__menu">
-                    <li class="gnav__menu__item"><a href="../index.html">Top</a></li>
+                    <li class="gnav__menu__item"><a href="top.html">Top</a></li>
                     <li class="gnav__menu__item"><a href="aboutus.html">運営スタッフとは</a></li>
                     <li class="gnav__menu__item"><a href="introduce.html">局紹介</a></li>
                     <li class="gnav__menu__item"><a href="howto.html">入会方法</a></li>
                     <li class="gnav__menu__item"><a href="event.html">新歓情報</a></li>
-                    <li class="gnav__menu__item"><a href="contact.html">お問合せ</a></li>
+                    <li class="gnav__menu__item"><a href="contact.html">お問い合わせ</a></li>
                     <li class="gnav__menu__item"><a href="photogallery.html">運スタ写真館</a></li>
                 </ul>
             </div>
