--- a/pages/components.html
+++ b/pages/components.html
@@ -136,7 +136,7 @@
 
           <hr />
           <ul class="nav-list">
-           <li><a href="../index.html">HOME</a></li> <li><a href="aboutfes.html">早稲田祭とは</a></li>
+           <li><a href="top.html">Top</a></li> <li><a href="aboutfes.html">早稲田祭とは</a></li>
             <li><a href="aboutus.html">運営スタッフとは</a></li>
           </ul>
           <hr />
@@ -147,9 +147,9 @@
             <li><a href ="howto.html">入会方法</a>
             </li>
             <li><a href="aboutstaff.html">
-             スタッフの内情
+             運営スタッフのリアル
             </a></li>
-            <li><a href="overall.html">運営スタッフ全体像</a></li>
+            <li><a href="overall.html">運営スタッフの全体像</a></li>
           </ul>
           <hr />
           <ul class="nav-list">
