--- a/pages/top.html
+++ b/pages/top.html
@@ -58,9 +58,7 @@
  <p>NEWS</p>
  <div class="newscontainer">
   <div class="paragraph">対面説明会応募フォームは<a href="https://docs.google.com/forms/d/e/1FAIpQLSclxm2qaAjPRRUA55MydFYBVwnnfTI-fxwsibBX_OGSdzU8xg/viewform" target="_blank" rel="noreferrer noopener">こちら</a>から！</div>
-  <!--3/26 12:00リリース
-    <div class="paragraph"><a>交流企画参加希望フォーム①受付開始！</a></div>
-  -->
+    <div class="paragraph"><a href="#kouryuu">交流企画参加希望フォーム①受付開始！</a></div>
  </div>
 </div>
 
@@ -442,6 +440,7 @@
   }
   .section1-text{
       color:#08263a;
+      white-space: nowrap;
   }
   .toptext{
     text-align: center;
