--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -447,7 +447,7 @@
   padding-bottom: 50px;
   margin-top:-4.5px;
   z-index: 5;
-  margin-bottom:200px;
+  margin-bottom:250px;
 }
 
 .image5-1{
@@ -485,11 +485,12 @@
     border: 3px solid #77A9AA;
     border-radius: 20px;
     position: relative;
+    margin-top:100px;
   }
 
   .sammy{
     position:absolute;
-    top:0;
+    top:-10%;
     right:-5%;
     transform: translateX(-50%);
     transform: translateY(-50%);
@@ -515,7 +516,7 @@
   .box2-img{
     right:0;
     bottom: 1%;
-    width:70%;
+    width:50%;
     z-index: 99;
   }
 
@@ -531,13 +532,13 @@
     width: 100%;
   }
   .image5-1{
-    width: 70%;
+    width:50%;
     left:-3%
   }
 
   .image5-2{
-    width: 70%;
-    top: 100%;
+    width:50%;
+    top:80%;
   }
 
   .paragraph{
